[gd_scene load_steps=2 format=3 uid="uid://dlxtollmevm3p"]

[ext_resource type="Script" path="res://scenes/game/game_manager.gd" id="1_432j4"]

[node name="GameManager" type="Node2D"]
script = ExtResource("1_432j4")
